force-app/main/Home/objects/Conversation_Group_Participant__c/Conversation_Group_Participant__c.object-meta.xml
<CustomObject>
    <label>Conversation Group Participant</label>
    <pluralLabel>Conversation Group Participants</pluralLabel>
    <nameField>
        <label>Group Participant Name</label>
        <type>AutoNumber</type>
        <displayFormat>CGP-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Links Users, Contacts, Person Accounts, and Groups to a Conversation thread for group messages.</description>
</CustomObject> 