force-app/main/Home/objects/Conversation_Group_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conversation_Group_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField> 