force-app/main/Home/objects/Conversation_Group_Participant__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>ID of the Salesforce public group or role</description>
    <label>Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField> 