force-app/main/Home/objects/Conversation_Group_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conversation_Group_Users</relationshipName>
    <type>Lookup</type>
</CustomField> 